--- a/repos/backend/Dockerfile
+++ b/repos/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build
-FROM golang:1.23-alpine AS BUILDER
+FROM golang:1.23-alpine AS builder
 
 WORKDIR /app
 
@@ -8,16 +8,19 @@ RUN apk add --no-cache git
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY ./cmd ./cmd
+# Copy everything (not just ./cmd)
+COPY . .
 
 WORKDIR /app/cmd/equipqr
+
 RUN CGO_ENABLED=0 GOOS=linux go build -o /main .
 
+# Stage 2: Runtime
 FROM alpine:latest
 
 WORKDIR /root/
 
-COPY --from=BUILDER /main .
+COPY --from=builder /main .
 
 EXPOSE 3000
 
