--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,45 @@
-.env
+# IDE
+.vscode/*
 .idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# SSL keys and certs
+# Environment
+.env
+
+# Private files (SSL keys and certs)
 **/*.pem
+
+# Python files (QR Generator)
+**/__pycache__/
+repos/qr_gen/*.py[oc]
+repos/qr_gen/build/
+repos/qr_gen/dist/
+repos/qr_gen/wheels/
+repos/qr_gen/*.egg-info
+
+# Virtual environment (QR Generator)
+repos/qr_gen/.venv
+
+# Generated QR codes
+**/equipment_qr.png
+
+# Frontend
+## Logs
+repos/frontend/logs
+repos/frontend/*.log
+repos/frontend/npm-debug.log*
+repos/frontend/yarn-debug.log*
+repos/frontend/yarn-error.log*
+repos/frontend/pnpm-debug.log*
+repos/frontend/lerna-debug.log*
+
+## Node_modules and build directories
+repos/frontend/node_modules
+repos/frontend/dist
+repos/frontend/dist-ssr
+repos/frontend/*.local
