chore: finished README.md for how the development environment works now. also setup some vite config stuff i forgot about because i got sick

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ CORS_ALLOW_ORIGINS="*"                 # Allowed origins for CORS requests (upda
 CORS_ALLOW_HEADERS="Origin, Content-Type, Accept, Authorization"  # Allowed headers for CORS requests
 
 # Frontend (development)
+VITE_HOST="0.0.0.0"
+VITE_PORT=3000
 VITE_SSL_KEY_PATH="path/to/ssl/key.pem"  # Path to the SSL key used by the frontend (replace with actual path)
 VITE_SSL_CERT_PATH="path/to/ssl/cert.pem" # Path to the SSL certificate used by the frontend (replace with actual path)
 
