feat: equipment page; vite proxy url

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ VITE_HOST="0.0.0.0"
 VITE_PORT=3000
 VITE_SSL_KEY_PATH="path/to/ssl/key.pem"  # Path to the SSL key used by the frontend (replace with actual path)
 VITE_SSL_CERT_PATH="path/to/ssl/cert.pem" # Path to the SSL certificate used by the frontend (replace with actual path)
+VITE_PROXY_TARGET=https://localhost:8080
 
 # Postgres
 POSTGRES_USER="postgres"                 # Postgres user (replace with real username)
