--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ repos/frontend/node_modules
 repos/frontend/dist
 repos/frontend/dist-ssr
 repos/frontend/*.local
+
+# Built static files from frontend
+repos/backend/web
