--- a/repos/frontend/package.json
+++ b/repos/frontend/package.json
@@ -35,6 +35,8 @@
 		"autoprefixer": "^10.4.21",
 		"lucide-svelte": "^0.517.0",
 		"postcss": "^8.5.6",
-		"qr-scanner": "^1.4.2"
+		"qr-scanner": "^1.4.2",
+		"serve": "^14.2.4",
+		"uuid": "^11.1.0"
 	}
 }
