--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 # Backend
 APP_HOST="0.0.0.0"                     # The host address the server will listen on
 APP_PORT="8080"                        # The port the server will listen on
-SSL_CERT_PATH="path/to/ssl/cert.pem"   # Path to the SSL certificate (replace with actual path in production)
-SSL_KEY_PATH="path/to/ssl/key.pem"     # Path to the SSL private key (replace with actual path in production)
+SSL_CERT="path/to/ssl/cert.pem"   # Path to the SSL certificate (replace with actual path in production)
+SSL_KEY="path/to/ssl/key.pem"     # Path to the SSL private key (replace with actual path in production)
 CORS_ALLOW_ORIGINS="*"                 # Allowed origins for CORS requests (update as needed)
 CORS_ALLOW_HEADERS="Origin, Content-Type, Accept, Authorization"  # Allowed headers for CORS requests
 
 # Frontend (development)
 VITE_HOST="0.0.0.0"
 VITE_PORT=3000
-VITE_SSL_KEY_PATH="path/to/ssl/key.pem"  # Path to the SSL key used by the frontend (replace with actual path)
 VITE_SSL_CERT_PATH="path/to/ssl/cert.pem" # Path to the SSL certificate used by the frontend (replace with actual path)
+VITE_SSL_KEY_PATH="path/to/ssl/key.pem"  # Path to the SSL key used by the frontend (replace with actual path)
 VITE_PROXY_TARGET=https://localhost:8080
 
 # Postgres
