--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ repos/frontend/*.local
 # Built static files from frontend
 repos/backend/web
 repos/backend/tmp
+
+# compiled backend
+repos/backend/main
+repos/backend/equipment_qr
