--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 services:
   backend:
     build:
-     context: ./repos/backend/
-     dockerfile: Dockerfile
+      context: ./repos/backend/
+      dockerfile: Dockerfile
     depends_on:
       - postgres
+      - redis
     ports:
       - "${APP_PORT}:3000"
     networks:
       - app_network
-    
+
   postgres:
     image: postgres:17
     container_name: postgres
@@ -22,9 +23,17 @@ services:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    
     networks:
-      - "app_network"
+      - app_network
+
+  redis:
+    image: redis:7
+    container_name: redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    networks:
+      - app_network
 
 volumes:
   postgres_data:
