--- a/repos/frontend/package.json
+++ b/repos/frontend/package.json
@@ -20,7 +20,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
-		"bits-ui": "^2.8.4",
+		"bits-ui": "^2.8.6",
 		"clsx": "^2.1.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -32,7 +32,9 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@types/country-list": "^2.1.4",
 		"autoprefixer": "^10.4.21",
+		"country-list": "^2.3.0",
 		"lucide-svelte": "^0.517.0",
 		"postcss": "^8.5.6",
 		"qr-scanner": "^1.4.2",
