--- a/repos/frontend/package.json
+++ b/repos/frontend/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 vite dev",
+		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -22,8 +22,10 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"bits-ui": "^2.8.6",
 		"clsx": "^2.1.1",
+		"mode-watcher": "^1.0.8",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.1.10",
