--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_HOST="0.0.0.0"                     # The host address the server will listen
 APP_PORT="8080"                        # The port the server will listen on
 SSL_CERT="path/to/ssl/cert.pem"   # Path to the SSL certificate (replace with actual path in production)
 SSL_KEY="path/to/ssl/key.pem"     # Path to the SSL private key (replace with actual path in production)
-CORS_ALLOW_ORIGINS="*"                 # Allowed origins for CORS requests (update as needed)
+CORS_ALLOW_ORIGINS="https://localhost:3000" # Allowed origins for CORS requests (update as needed)
 CORS_ALLOW_HEADERS="Origin, Content-Type, Accept, Authorization"  # Allowed headers for CORS requests
 JWT_SECRET="" # Generate with: python3 -c "import base64, secrets; print(base64.urlsafe_b64encode(secrets.token_bytes(32)).decode())"
 
