hooked up invite link system and also implemented accept link system dependant on cookies

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ SSL_KEY="path/to/ssl/key.pem"     # Path to the SSL private key (replace with ac
 CORS_ALLOW_ORIGINS="https://localhost:3000,https://localhost:8080" # Allowed origins for CORS requests (update as needed)
 CORS_ALLOW_HEADERS="Origin, Content-Type, Accept, Authorization"  # Allowed headers for CORS requests
 JWT_SECRET="" # Generate with: python3 -c "import base64, secrets; print(base64.urlsafe_b64encode(secrets.token_bytes(32)).decode())"
+BASE_URL="https://localhost:3000"
 
 # Frontend (development)
 VITE_HOST="0.0.0.0"
