--- a/repos/frontend/package.json
+++ b/repos/frontend/package.json
@@ -34,6 +34,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@simplewebauthn/browser": "^13.1.2",
 		"@types/country-list": "^2.1.4",
 		"autoprefixer": "^10.4.21",
 		"country-list": "^2.3.0",
