refactor some stuff

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,59 @@
-# Backend
-APP_HOST="0.0.0.0"                     # The host address the server will listen on
-APP_PORT="8080"                        # The port the server will listen on
-SSL_CERT="path/to/ssl/cert.pem"   # Path to the SSL certificate (replace with actual path in production)
-SSL_KEY="path/to/ssl/key.pem"     # Path to the SSL private key (replace with actual path in production)
-CORS_ALLOW_ORIGINS="https://localhost:3000,https://localhost:8080" # Allowed origins for CORS requests (update as needed)
-CORS_ALLOW_HEADERS="Origin, Content-Type, Accept, Authorization"  # Allowed headers for CORS requests
-JWT_SECRET="" # Generate with: python3 -c "import base64, secrets; print(base64.urlsafe_b64encode(secrets.token_bytes(32)).decode())"
+# ───────────────────────────────────────────────
+# 🌐 Backend Server Configuration
+# ───────────────────────────────────────────────
+APP_HOST="0.0.0.0"
+APP_PORT="8080"
+SSL_CERT_PATH="path/to/ssl/cert.pem"
+SSL_KEY_PATH="path/to/ssl/key.pem"
+CORS_ALLOW_ORIGINS="https://localhost:3000,https://localhost:8080"
+CORS_ALLOW_HEADERS="Origin, Content-Type, Accept, Authorization"
+
+# ───────────────────────────────────────────────
+# 🔐 Authentication Configuration
+# ───────────────────────────────────────────────
+JWT_SECRET=""                  # Generate with: python3 -c "import base64, secrets; print(base64.urlsafe_b64encode(secrets.token_bytes(32)).decode())"
+INVITE_SECRET=""               # Generate the same way
+JWT_EXPIRY_MINUTES=15
+COOKIE_EXPIRY_DAYS=7
 BASE_URL="https://localhost:3000"
 
-# Frontend (development)
+# ───────────────────────────────────────────────
+# 🛠️ Development Mode
+# ───────────────────────────────────────────────
+DEV_MODE=false
+VERIFY_FRONTEND_HASH=true
+VERIFY_FRONTEND_HASH_FREQUENCY=5
+
+# ───────────────────────────────────────────────
+# ⚙️ Frontend Dev (Vite) Proxy Configuration
+# ───────────────────────────────────────────────
 VITE_HOST="0.0.0.0"
 VITE_PORT=3000
-VITE_SSL_CERT_PATH="path/to/ssl/cert.pem" # Path to the SSL certificate used by the frontend (replace with actual path)
-VITE_SSL_KEY_PATH="path/to/ssl/key.pem"  # Path to the SSL key used by the frontend (replace with actual path)
-VITE_PROXY_TARGET=https://localhost:8080
+VITE_SSL_CERT_PATH="path/to/ssl/cert.pem"
+VITE_SSL_KEY_PATH="path/to/ssl/key.pem"
+VITE_PROXY_TARGET="https://localhost:8080"
 
-# Postgres
-POSTGRES_USER="postgres"                 # Postgres user (replace with real username)
-POSTGRES_PASSWORD="postgres"             # Postgres password (replace with real password)
-POSTGRES_PORT="5432"                     # Port for Postgres (default is 5432)
-POSTGRES_HOST="localhost"                # Host for the Postgres server
-POSTGRES_DB="appdb"                      # Database name for your app
+# ───────────────────────────────────────────────
+# 🗄️ PostgreSQL Database Configuration
+# ───────────────────────────────────────────────
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_PORT="5432"
+POSTGRES_HOST="localhost"
+POSTGRES_DB="appdb"
+
+# ───────────────────────────────────────────────
+# 📧 Email Configuration (Optional)
+# ───────────────────────────────────────────────
+EMAIL_ENABLED=true
+EMAIL_DISPLAY_NAME="My App"
+EMAIL_REPLY_TO="noreply@example.com"
+EMAIL_SMTP_ENABLE=true
+EMAIL_SMTP_ADDRESS="smtp.mailgun.org"
+EMAIL_SMPT_PORT=587
+EMAIL_SMPT_USERNAME="postmaster@example.com"
+EMAIL_SMPT_PASSWORD="supersecretpassword"
+EMAIL_SMTP_DOMAIN="example.com"
+EMAIL_SMTP_AUTHENTICATION="plain"
+EMAIL_SMTP_ENABLE_STARTTLS_AUTO=true
+EMAIL_SMTP_TLS=true
