push to migrate to gitlab

--- a/.env.example
+++ b/.env.example
@@ -36,10 +36,14 @@ POSTGRES_DB="equipqr"
 # ───────────────────────────────────────────────
 # ☁️ MinIO Object Storage Configuration
 # ───────────────────────────────────────────────
-MINIO_ENDPOINT="localhost:9000"
-MINIO_ACCESS_KEY="minioadmin" # openssl rand -base64 12 | tr -dc 'A-Za-z0-9' | cut -c1-16
-MINIO_SECRET_KEY="minioadmin123" # openssl rand -base64 48 | tr -dc 'A-Za-z0-9' | head -c 32
+MINIO_HOST="localhost"
+MINIO_PORT=9000
+MINIO_BUCKET="equipqr"
+MINIO_WEBVIEW_PORT=9001
+MINIO_ACCESS_KEY="minio_access_key" # openssl rand -base64 12 | tr -dc 'A-Za-z0-9' | cut -c1-16
+MINIO_SECRET_KEY="minio_secret_key" # openssl rand -base64 48 | tr -d '\n' | cut -c1-32
 MINIO_USE_SSL=false
+
 
 # ───────────────────────────────────────────────
 # 📧 Email Configuration
